tmp-dev-full/objects/MagazineSubscriptionSync__e/fields/Page__c.field-meta.xml
<CustomField>
    <fullName>Page__c</fullName>
    <label>Page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>