tmp-dev-full/objects/MagazineSubscriptionSync__e/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>ERP 요청 DTO(JSON)</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>